# lggm

./: .astylerc  .gitignore  CMakeLists.txt  README.md  beautify.sh
include/lggm/: dbgprn.h  lggm.h
include/lggm/impl/: dbgprn_cfg.h  dbgprn_impl.h  dbgprn_macro_impl.h  lggm_impl.h  lggm_macro_impl.h  macro_impl.h
script/conv/: template_to_hex.sh
script/version/: get_component_version_info.sh
src/: CMakeLists.txt  main.c  main.cpp
src/lggm/: dbgprn.c
